tests/src/Loader/classloader/generics/Instantiation/Negative/param02.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    class _generics_Instantiation_Negative_param02_param02_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_param02_param02_cmd()
        {
            int rv = CoreClrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\param02\\param02.cmd");
            Assert.Equal(rv, CoreClrTestWrapperLib.EXIT_SUCCESS_CODE);
        }
    }
}
